Fix: overlapping sections

--- a/src/components/ContactPage/ContactPage.css
+++ b/src/components/ContactPage/ContactPage.css
@@ -1,8 +1,7 @@
 .contact-page {
     width: 90%;
-    /* min-height: calc(100vh - 120px); */
+    min-height: calc(100vh - 120px);
     overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -35,6 +34,10 @@
     display: flex;
     align-items: flex-start;
     margin-bottom: 40px;
+}
+
+.contact-page__content:first-of-type {
+    flex-shrink: 0;
 }
 
 .contact-page__content-left {
@@ -128,7 +131,6 @@
 @media only screen and (max-width: 500px) {
     .contact-page {
         padding: 40px 20px;
-        padding-bottom: 200px;
     }
     .contact-page__heading--main {
         font-size: 2.3em;
